2002-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (InitializeCriticalSectionAndSpinCount):
	Add prototype.
	(SetCriticalSectionSpinCount): Likewise.

2001-12-15  Andrew Begel  <abegel@eecs.berkeley.edu>

	*include/winbase.h (CreateHardLink): Correct typo in UNICODE
	mappings.

2001-12-11  Phillip Susi  <psusi@cfl.rr.com>

	* include/commctrl.h (ACS_*): Add new defines.
	(PGS_*): Ditto.
	(CBES_*): Ditto.
	(TBSTYLE_*): Ditto.
	(TB_*): Ditto.
	(TTS_*): Ditto.
	(UDS_HOTTRACK): Add define.
	(SBT_TOOLTIPS): Ditto.
	(TBS_*): Add new defines.
	(HDS_*): Ditto.
	(LVS_EX_*) Ditto.
	(LVKF_*): Ditto.
	(TCM_GETEXTENDEDSTYLE): Add define.
	(TVS_NOHSCROLL): Ditto.
	(TVIF_INTEGRAL): Ditto.
	(DTS_SHORTDATECENTURYFORMAT): Ditto.
	(TCS_*): Add new defines.
	(CBEM_*): Add defines.
	(tagNMITEMACTIVATE): Add structure definition and typedefs.
	(tagTVITEMEX[AW]: Ditto.
	(tagTVINSERTSTRUCT[AW]: Add union member.
	* include/winbase.h (VirtualAllocEx): Add prototype.
	* include/winuser.h (SS_*): Add new defines.

2001-12-07  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in: Increment VERSION.
	* include/w32api.h: Ditto.

2001-12-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/setupi.h (SetupDiCreateDeviceInterfaceRegKey[AW],
	SetupDiCreateDevRegKey[AW],SetupDiDeleteDeviceInterfaceRegKey,
	SetupDiDeleteDevRegKey,SetupDiOpenClassRegKey,
	SetupDiOpenClassRegKeyEx[AW],SetupDiOpenDeviceInterfaceRegKey,
	SetupDiOpenDevRegKey): Correct function names.

2001-12-04  Earnie Boyd  <earnie@users.sf.net>

	* include/winuser.h (IDC_STATIC): Don't define.

2001-12-04  Danny Smith  <dannysmith@users.sourceforge.net>

        Cleanup merge between SourceForge and winsup CVS.
        * include/winbase.h (OSVERSIONINFO[AW], OSVERSIONINFOEX[AW]: Remove 
	definitions.
        * include/winnt.h (VER_NT*): Remove duplicate defines.
        (VER_SUITE*): Group with VER_PLATFORM*, VER_NT* defines.

2001-12-03  Earnie Boyd  <earnie@users.sf.net>
