@@ -563,6 +563,8 @@ typedef BYTE BOOLEAN,*PBOOLEAN;
 #define PF_ALPHA_BYTE_INSTRUCTIONS 5
 #define PF_XMMI_INSTRUCTIONS_AVAILABLE 6
 #define PF_3DNOW_INSTRUCTIONS_AVAILABLE 7
+#define PF_RDTSC_INSTRUCTION_AVAILABLE 8
+#define PF_PAE_ENABLED 9
 #define PAGE_READONLY 2
 #define PAGE_READWRITE 4
 #define PAGE_WRITECOPY 8
@@ -624,6 +626,10 @@ typedef BYTE BOOLEAN,*PBOOLEAN;
 #define MEM_PRIVATE 131072
 #define MEM_DECOMMIT 16384
 #define MEM_RELEASE 32768
+#define MEM_PHYSICAL	0x400000
+#define MEM_RESET	0x80000 /* NT */
+#define MEM_TOP_DOWN	0x100000 /* NT */
+#define MEM_WRITE_WATCH	0x200000 /* 98/Me */
 #define SEC_FILE 0x800000
 #define SEC_IMAGE 0x1000000
 #define SEC_VLM 0x2000000
