@@ -327,13 +327,18 @@ extern "C" {
 #define WS_EX_ACCEPTFILES 16
 #define WS_EX_APPWINDOW	0x40000
 #define WS_EX_CLIENTEDGE 512
+#define WS_EX_COMPOSITED 0x2000000 /* XP */
 #define WS_EX_CONTEXTHELP 0x400
 #define WS_EX_CONTROLPARENT 0x10000
 #define WS_EX_DLGMODALFRAME 1
+#define WS_EX_LAYERED 0x80000   /* w2k */
+#define WS_EX_LAYOUTRTL 0x400000 /* w98, w2k */
 #define WS_EX_LEFT	0
 #define WS_EX_LEFTSCROLLBAR	0x4000
 #define WS_EX_LTRREADING	0
 #define WS_EX_MDICHILD	64
+#define WS_EX_NOACTIVATE 0x8000000 /* w2k */
+#define WS_EX_NOINHERITLAYOUT 0x100000 /* w2k */
 #define WS_EX_NOPARENTNOTIFY	4
 #define WS_EX_OVERLAPPEDWINDOW	0x300
 #define WS_EX_PALETTEWINDOW	0x188
@@ -944,6 +949,7 @@ extern "C" {
 #define HWND_TOP ((HWND)0)
 #define HWND_TOPMOST ((HWND)(-1))
 #define HWND_DESKTOP (HWND)0
+#define HWND_MESSAGE ((HWND)(-3)) /* w2k */
 #define RDW_ERASE 4
 #define RDW_FRAME 1024
 #define RDW_INTERNALPAINT 2
