@@ -1,3 +1,15 @@
+2002-01-04  TAMURA Kent  <tkent@users.sourceforge.net>
+
+	* include/wingdi.h (BI_JPEG, BI_PNG, GGO_BEZIER,GGO_UNHINTED,
+	 LAYOUT_RTL, LAYOUT_BITMAPORIENTATIONPRESERVED): Add defines.
+	* include/winuser.h (HWND_MESSAGE, WS_EX_COMPOSITED,
+	WS_EX_LAYERED, WS_EX_LAYOUTRTL, WS_EX_NOACTIVATE,
+	WS_EX_NOINHERITLAYOUT): Add defines.
+	* include/winnt.h (PF_RDTSC_INSTRUCTION_AVAILABLE,
+	PF_PAE_ENABLED, MEM_PHYSICAL, MEM_RESET, MEM_TOP_DOWN,
+	MEM_WRITE_WATCH): Add defines.
+
+
 2002-01-04  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/winbase.h (InitializeCriticalSectionAndSpinCount):
